--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
-host_key_checking = False
-inventory = inventory
+host_key_checking = True
+inventory = ansible/inventory
 nocows = 1
+
+[ssh_connection]
+ssh_args = -o UserKnownHostsFile=keys/known_hosts -o ControlMaster=auto -o ControlPersist=60s
