--- a/ansible/roles/os_cluster/handlers/main.yml
+++ b/ansible/roles/os_cluster/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: refresh the dynamic inventory cache
-  command: ./inventory/openstack.py --refresh --list
+  command: ./ansible/inventory/openstack.py --refresh --list
   changed_when: false
