--- a/ansible/roles/os_cluster/tasks/ssh_keys.yml
+++ b/ansible/roles/os_cluster/tasks/ssh_keys.yml
@@ -20,10 +20,15 @@
 
 - name: read SSH keys
   set_fact:
-    master_private_key: "{{ lookup('file', './keys/master_host')  }}"
-    master_public_key: "{{ lookup('file', './keys/master_host.pub') }}"
-    worker_private_key: "{{ lookup('file', './keys/worker_host')  }}"
-    worker_public_key: "{{ lookup('file', './keys/worker_host.pub') }}"
+    master_private_key: "{{ lookup('file', '../keys/master_host')  }}"
+    master_public_key: "{{ lookup('file', '../keys/master_host.pub') }}"
+    worker_private_key: "{{ lookup('file', '../keys/worker_host')  }}"
+    worker_public_key: "{{ lookup('file', '../keys/worker_host.pub') }}"
+
+- name: generate known_hosts
+  template:
+    src: templates/known_hosts.j2
+    dest: ./keys/known_hosts
 
 - name: register SSH key
   os_keypair:
