--- a/ansible/roles/docker_registry_client/handlers/main.yml
+++ b/ansible/roles/docker_registry_client/handlers/main.yml
@@ -2,5 +2,5 @@
 - name: restart docker daemon
   become: true
   become_user: root
-  service: name=etcd state=restarted
+  service: name=docker state=restarted
 
